--- a/biblioteca/livros/templates/base.html
+++ b/biblioteca/livros/templates/base.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class=" container-fluid ">
-        <a class="navbar-brand" href="#">Book Store</a>
+        <a class="navbar-brand" href="/">Book Store</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,8 +45,8 @@
       </div>
     </nav>
     {% block content%}{% endblock %}
-    <footer>
-      <div class="rodape container-fluid text-white text-center pt-5">
+    <footer >
+      <div class="rodape container-fluid text-center pt-5">
         <p>Todos os direitos reservados &copy; Lucas Bassora da Silva</p>
       </div>
     </footer>
