--- a/biblioteca/livros/templates/livros/book.html
+++ b/biblioteca/livros/templates/livros/book.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title%}Adicionar livro{% endblock %}
+{% block title%}{{ livro.titulo }}{% endblock %}
 
 {% block content%}
 <div class="offset-1 col-10 list-div mt-5 mb-5">
