--- a/biblioteca/livros/templates/livros/editBook.html
+++ b/biblioteca/livros/templates/livros/editBook.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
 
-{% block title%}Adicionar livro{% endblock %}
+{% block title%}Editar {{ livro.titulo }}{% endblock %}
 
 {% block content%}
 <div class="offset-1 col-10 list-div">
-    <h1 class="text-center my-3">Adicione um novo livro</h1>
+    <h1 class="text-center my-3">Editando {{ livro.titulo }}</h1>
     <form action="" method="post">
         {% csrf_token %}
-        {{ form.as_p}}
+        {{ form|crispy }}
         <input type="submit" class="btn btn-success my-2" value="Salvar livro">
         <br>
     </form>
