--- a/biblioteca/livros/templates/livros/list.html
+++ b/biblioteca/livros/templates/livros/list.html
@@ -24,7 +24,14 @@
     </button>
   </form>
 </div>
-<div class="container">
+<div class="container ">
+    {% if messages %}
+      <ul class="messages p-0">
+        {% for message in messages %}
+          <li {% if message.tags%}class="alert alert-{{message.tags}} text-center"{% endif %}>{{message}}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
     <table class="table  table-striped">
             <thead>
                 <tr>
