melhoria na aplicação, foi adicionado funcionalidade de busca por titulo do livro e funcionalidade de confirmação de exclusão de livro.

--- a/biblioteca/livros/static/css/style.css
+++ b/biblioteca/livros/static/css/style.css
@@ -47,9 +47,6 @@
     color: red;
 }
 
-.fa-eye{
-    color: #9120bd;
-}
 
 .fa-backward{
     color: black;
@@ -83,3 +80,10 @@
 ul.messages li{
     list-style: none;
 }
+
+/* paginação */
+
+.icone{
+    color: #9120bd;
+}
+
